--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+
+  background: #091134;
+  background-image: linear-gradient(-180deg, rgba(11,0,54,0.00) 82%, rgba(127,7,173,0.37) 100%);
+  box-shadow: inset 0 1px 3px 0 rgba(0,0,0,0.50);
 }
 
 .logo-container {
@@ -105,7 +109,7 @@
   text-align: center;
   font-size: 24px;
   margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 120px;
 }
 
 .footer p {
