--- a/style.css
+++ b/style.css
@@ -2,16 +2,13 @@
 
 body {
   background-color: #38075C;
-  /* background-color: #3E0046; */
 }
 
 .landscape-container {
   background-color: #091134;
-  /* height: 344px; */
 }
 
 .landscape {
-  /* background-image: url(./assets/images/landscape_1024.png); */
   background-repeat: no-repeat;
   background-position: center;
   height: 344px;
@@ -55,7 +52,6 @@ body {
 }
 
 .logo-shine {
-  /* opacity: 0.33; */
   margin-top: -70px;
   background-image: radial-gradient(50% 50%, rgba(161,0,255,0.10) 49%, rgba(36,179,114,0.00) 100%);
   z-index: 1;
@@ -78,7 +74,7 @@ body {
 .contents {
   display: flex;
   flex-direction: column;
-  margin-top: 60px;
+  margin-top: 100px;
   margin-bottom: 60px;
 }
 
@@ -189,7 +185,25 @@ body {
   }
 
   .wordmark {
-    width: 250px;
+    width: 275px;
+    margin-top: 200px;
+  }
+
+  .logo-container p {
+    margin-top: 30px;
+    font-size: 20px
+  }
+
+  .contents {
+    margin-top: 0px;
+  }
+
+  .content-item-text {
+    font-size: 16px;
+  }
+
+  .content-item p {
+    width: 290px;
   }
 }
 
