--- a/style.css
+++ b/style.css
@@ -210,6 +210,7 @@ body {
 @media (min-width: 769px) {
   .landscape {
     background-image: url(./assets/images/landscape_1024.png);
+    height: 296px;
   }
 
   .bricking {
