--- a/style.css
+++ b/style.css
@@ -179,11 +179,11 @@ body {
 
   .content-item {
     flex-direction: column;
+    align-items: center;
   }
 
   .content-item-text {
     padding-top: 25px;
-    padding-left: 5px;
   }
 
   .content-item img {
