--- a/clearfix.css
+++ b/clearfix.css
@@ -5,10 +5,10 @@ section, p, footer, small {
   padding: 0;
   border: 0;
   outline: 0;
-  font: inherit;
+  /* font: inherit; */
   color: inherit;
   text-align: inherit;
-  text-decoration: inherit;
+  /* text-decoration: inherit; */
   vertical-align: inherit;
   box-sizing: inherit;
   background: transparent;
@@ -20,7 +20,7 @@ footer, small {
 }
 
 ul {
-  list-style: none;
+  /* list-style: none; */
 }
 
 /* Clearfix */
