--- a/style.css
+++ b/style.css
@@ -100,6 +100,18 @@ body {
   width: 300px;
 }
 
+.content-item-long-text {
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 10px;
+  font-family: AvenirNextCondensed-Regular;
+  font-size: 20px;
+  color: #68cfcf;
+  width: auto;
+}
+
+
+
 .content-item-title {
   font-size: 24px;
   font-weight: 600;
@@ -108,6 +120,16 @@ body {
 
 .content-item p {
   padding-top: 5px;
+}
+
+.content-item-long-text p {
+  padding-bottom: 20px;
+}
+
+.content-item-long-text h1 {
+  size: 2em;
+  font-family: AvenirNextCondensed-Regular;
+  font-weight: bold;
 }
 
 .question-mark {
